updated valid env variables

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@ DISCORD_BOT_TOKEN=
 
 # Environment, set to production to disable verbose logging.
 APP_ENV=local
+
+# Database configuration
+DB_CONNECTION=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
+
+# Cache configuration
+CACHE_DRIVER=
