core updates, added parts

--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,9 @@
     "require": {
         "discodian/core": "@dev"
     },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "workbench/*"
-        }
-    ],
     "config": {
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
