fixed returning a view for jira ext

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "discodian/core": "@dev",
-        "discodian/ext-jira": "@dev"
+        "discodian/ext-jira": "@dev",
+        "discodian/ext-pusher": "@dev"
     },
     "config": {
         "sort-packages": true
