added readme changes

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-# Bot token.
+# -- Bot token.
 DISCORD_BOT_TOKEN=
 
-# Environment, set to production to disable verbose logging.
-APP_ENV=local
+# -- Environment, set to production to disable verbose logging.
+# APP_ENV=local
 
-# Database configuration
-DB_CONNECTION=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+# -- Database configuration
+# DB_CONNECTION=
+# DB_DATABASE=
+# DB_USERNAME=
+# DB_PASSWORD=
 
-# Cache configuration
-CACHE_DRIVER=
+# -- Cache configuration
+# CACHE_DRIVER=
