added discord admins env var

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # -- Bot token.
 DISCORD_BOT_TOKEN=
 
+# -- Discord Admin User IDs, comma delimited
+# DISCORD_ADMINS=
+
 # -- Environment, set to production to disable verbose logging.
 # APP_ENV=local
 
