--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "discodian/core": "@dev"
+        "discodian/core": "^0.1.0@beta"
     },
     "scripts": {
         "post-root-package-install": [
